<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_sortTracksBy"
        android:orderInCategory="100"
        android:title="@string/sort_tracks_by"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_newPlaylist"
        android:orderInCategory="101"
        android:title="@string/new_playlist"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_loadPlaylist"
        android:orderInCategory="102"
        android:title="@string/load_playlist"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_showAllTracks"
        android:orderInCategory="103"
        android:title="@string/show_all_tracks"
        app:showAsAction="never" />
</menu>