<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_name"
        android:id="@+id/txvTrackName"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:textStyle="bold"
        android:textSize="16sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/artist_name"
            android:id="@+id/txvArtistName"
            android:layout_marginLeft="5dp"
            android:layout_weight="7" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_0_00"
            android:id="@+id/txvDuration"
            android:textAlignment="textEnd"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>